crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_empty.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users {}"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "users",
    },
    columns: [],
}
