crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_modifier_args_record.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table t { n: integer() default({ x: 1 }) }"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: "t",
    },
    columns: [
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 11,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: "n",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 23,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 21,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 24,
                            },
                            end: Position {
                                line: 1,
                                column: 31,
                            },
                        },
                        value: "default",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 32,
                                },
                                end: Position {
                                    line: 1,
                                    column: 40,
                                },
                            },
                            value: Record(
                                [
                                    Field {
                                        name: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 34,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 35,
                                                },
                                            },
                                            value: "x",
                                        },
                                        value: Some(
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 37,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 38,
                                                    },
                                                },
                                                value: Number(
                                                    NumberLit {
                                                        value: 1.0,
                                                        text: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            ),
                        },
                    ],
                },
            ],
        },
    ],
}
