crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_modifiers_on_next_line.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users {\n    created: timestamp()\n        notNull\n        default(now)\n    id: integer()\n}\n"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "users",
    },
    columns: [
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 12,
                    },
                },
                value: "created",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 14,
                    },
                    end: Position {
                        line: 2,
                        column: 25,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 14,
                            },
                            end: Position {
                                line: 2,
                                column: 23,
                            },
                        },
                        value: Var(
                            "timestamp",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 16,
                            },
                        },
                        value: "notNull",
                    },
                    args: [],
                },
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 9,
                            },
                            end: Position {
                                line: 4,
                                column: 16,
                            },
                        },
                        value: "default",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 17,
                                },
                                end: Position {
                                    line: 4,
                                    column: 20,
                                },
                            },
                            value: Var(
                                "now",
                            ),
                        },
                    ],
                },
            ],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 7,
                    },
                },
                value: "id",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 9,
                    },
                    end: Position {
                        line: 5,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 9,
                            },
                            end: Position {
                                line: 5,
                                column: 16,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [],
        },
    ],
}
