crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_multiple_columns.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users {\n    id: integer() primaryKey\n    email: text() notNull unique\n}\n"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "users",
    },
    columns: [
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 7,
                    },
                },
                value: "id",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 2,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 16,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 19,
                            },
                            end: Position {
                                line: 2,
                                column: 29,
                            },
                        },
                        value: "primaryKey",
                    },
                    args: [],
                },
            ],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: "email",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 12,
                    },
                    end: Position {
                        line: 3,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 12,
                            },
                            end: Position {
                                line: 3,
                                column: 16,
                            },
                        },
                        value: Var(
                            "text",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 19,
                            },
                            end: Position {
                                line: 3,
                                column: 26,
                            },
                        },
                        value: "notNull",
                    },
                    args: [],
                },
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 27,
                            },
                            end: Position {
                                line: 3,
                                column: 33,
                            },
                        },
                        value: "unique",
                    },
                    args: [],
                },
            ],
        },
    ],
}
