crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_pub.snap
---
source: crates/alder-parse/src/item/table.rs
description: "pub table users {\n    id: integer() primaryKey autoIncrement\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 3,
            column: 2,
        },
    },
    value: Item {
        attributes: [],
        visibility: Pub(
            Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        ),
        kind: Table(
            TableDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: "users",
                },
                columns: [
                    Column {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 5,
                                },
                                end: Position {
                                    line: 2,
                                    column: 7,
                                },
                            },
                            value: "id",
                        },
                        builder: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 9,
                                },
                                end: Position {
                                    line: 2,
                                    column: 18,
                                },
                            },
                            value: Call {
                                function: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 16,
                                        },
                                    },
                                    value: Var(
                                        "integer",
                                    ),
                                },
                                arguments: [],
                            },
                        },
                        modifiers: [
                            Modifier {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 19,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 29,
                                        },
                                    },
                                    value: "primaryKey",
                                },
                                args: [],
                            },
                            Modifier {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 30,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 43,
                                        },
                                    },
                                    value: "autoIncrement",
                                },
                                args: [],
                            },
                        ],
                    },
                ],
            },
        ),
    },
}
